Remove redux boilerplates

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -26,7 +26,7 @@
     <script src="%PUBLIC_URL%/env/config.js"></script>
     <script>
       const DEFAULT_CONF = {
-        REACT_APP_NOPAS_ENDPOINT: 'http://localhost:8080',
+        REACT_APP_NOPAS_ENDPOINT: 'https://nomad-autoscaler.locus.rocks',
     }
     // IE11 doesn't support spread operator nor Object.assign
     // Clone-copy from DEFAULT_CONF, followed by the overriding values from config.env
